--- a/ui/index.html
+++ b/ui/index.html
@@ -11,16 +11,16 @@
           gtag('config', 'G-YL9BYGWB9N');
         </script>
 
-        <title>Kung Fu Chess - real-time chess without turns!</title>
-        <meta property="og:title" content="Kung Fu Chess - real-time chess without turns!" />
+        <title>Clutch Chess - real-time chess without turns!</title>
+        <meta property="og:title" content="Clutch Chess - real-time chess without turns!" />
         <meta
             name="description"
             property="og:description"
-            content="Kung Fu Chess is an online, real-time chess game without turns. Use a combination of strategy and speed to defeat your opponent. Play against AI of increasing difficulty, your friends, or people online."
+            content="Clutch Chess is an online, real-time chess game without turns. Use a combination of strategy and speed to defeat your opponent. Play against AI of increasing difficulty, your friends, or people online."
         />
 
-        <meta property="og:image" content="https://www.kfchess.com/static/logo.png" />
-        <meta property="og:image:secure_url" content="https://www.kfchess.com/static/logo.png" />
+        <meta property="og:image" content="https://www.clutchchess.com/static/logo.png" />
+        <meta property="og:image:secure_url" content="https://www.clutchchess.com/static/logo.png" />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="318" />
         <meta property="og:image:height" content="318" />
